--- a/index.html
+++ b/index.html
@@ -7,54 +7,49 @@
 href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,
 600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
 rel="stylesheet">
-<title>claraflix</title>
+<title>Claraflix</title>
 </head>
 <body>
 <header>claraflix</header>
 <section class="chamada">
 <div class="chamada-texto">
-<h1>séries e filmes sobrenatural</h1>
-<p>crepúsculo</p>
-<p>the vampire diaries</p>
+<h1>Entretenimento</h1>
+<p>Filmes</p>
+<p>Séries</p>
 </div>
-<div>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/BjVBjVwe3lM?si=FBRHNwOPrkjz5eIF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-</div>
+<iframe width="560" height="315"
+iframe width="560" height="315" src="https://www.youtube.com/embed/BjVBjVwe3lM?si=AwYQ2PDwdQbBqXpz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </section>
 <section class="categoria">
-<h2>Estilo de músicas</h2>
+<h2>Estilo de filmes e séries</h2>
 <div class="categoria-videos">
 <a
-href="https://www.youtube.com/watch?v=zRi5vOwNF1U&list=RDzRi5vOwNF1U&start_radi
-o=1">
-<img src="https://img.youtube.com/vi/zRi5vOwNF1U/maxresdefault.jpg" />
-</a>
-<a
-href="https://www.youtube.com/watch?v=bo_efYhYU2A&list=RDYQHsXMglC9A&index=3"
+href="https://www.youtube.com/embed/BjVBjVwe3lM?si=cZnxl7veR9KsDme6"
 >
-<img src="https://img.youtube.com/vi/bo_efYhYU2A/maxresdefault.jpg" />
+<img src="https://img.youtube.com/vi/BjVBjVwe3lM/maxresdefault.jpg">
 </a>
 <a
-href="https://www.youtube.com/watch?v=zvFroLUxRDQ&list=RDYQHsXMglC9A&index=2
-7">
-<img src="https://img.youtube.com/vi/zvFroLUxRDQ/maxresdefault.jpg" />
+href="https://www.youtube.com/embed/uBqJeOY5-08?si=8eXxXvsqJwcsJ7Wp">
+>
+<img src="https://img.youtube.com/vi/b2g2ZJ9BIpQ/maxresdefault.jpg" />
 </a>
 <a
-href="https://www.youtube.com/watch?v=u1V8YRJnr4Q&list=RDYQHsXMglC9A&index=14
-">
+href="https://www.youtube.com/embed/g4gEFZ0TJ8o?si=TXfq6SgjMR41VS-J">
+<img src="https://img.youtube.com/vi/g4gEFZ0TJ8o/maxresdefault.jpg" />
+</a>
+<a
+href="https://www.youtube.com/embed/QDRLSqm_WVg?si=BmlYxUleZ3XeeODp">
 
-<img src="https://img.youtube.com/vi/u1V8YRJnr4Q/maxresdefault.jpg" />
+<img src="https://img.youtube.com/vi/QDRLSqm_WVg/maxresdefault.jpg" />
 </a>
 <a
-href="https://www.youtube.com/watch?v=2oX2FSv4Rys&list=RDYQHsXMglC9A&index=15
-">
-<img src="https://img.youtube.com/vi/2oX2FSv4Rys/maxresdefault.jpg" />
+href="https://www.youtube.com/embed/N-_khrXH0w0?si=Zf5R13-zYf6oSJpl">
+<img src="https://img.youtube.com/vi/N-_khrXH0w0/maxresdefault.jpg" />
 </a>
 <a
-href="https://www.youtube.com/watch?v=rtOvBOTyX00&list=RDYQHsXMglC9A&index=27
-">
-<img src="https://img.youtube.com/vi/rtOvBOTyX00/maxresdefault.jpg" />
+href="https://www.youtube.com/embed/dHleJ3kT8VA?si=48T2dBoSgwxCJvzx">
+<img src="https://img.youtube.com/vi/dHleJ3kT8VA/maxresdefault.jpg" />
 </a>
 </div>
 </section>
