--- a/index.html
+++ b/index.html
@@ -1,57 +1,95 @@
 <html lang="pt-BR">
+
 <head>
-<link rel="stylesheet" href="styles.css">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link
-href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,
-600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
-rel="stylesheet">
-<title>Claraflix</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,
+600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <title>claraflix</title>
 </head>
+
 <body>
-<header>claraflix</header>
+    <header>claraflix</header>
+    <section class="chamada">
+        <div class="chamada-texto">
+            <h1>entreterimento</h1>
+            <p>tvdu</p>
+            <p>twilight</p>
+        </div>
+        <div>
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/pKGXV0J2xAQ?si=3zV6olDpNxbW6yqX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
+    <section class="categoria">
+        <h2> 1- Estilo de filmes e séries </h2>
+        <div class="categoria-videos">
+            <a href="https://www.youtube.com/watch?v=8d9XF3qhowA">
+                <img src="https://img.youtube.com/vi/8d9XF3qhowA/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/embed/DbMLXZsJ1P8?si=xR-27yer6l9utUI7">
+                <img src="https://img.youtube.com/vi/DbMLXZsJ1P8/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/embed/rkxg_evvsl4?si=Ar-WHVPmb85yWFkQ">
+                <img src="https://img.youtube.com/vi/6Gn-SjlQi1o/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/embed/EseifXC902Y?si=c38JX-WeJp-D_gy3">
+
+                <img src="https://img.youtube.com/vi/EseifXC902Y/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/embed/0I1mf70193M?si=h0T48cKX_mqIvbDa">
+                <img src="https://img.youtube.com/vi/OJnxAK6aVD4/maxresdefault.jpg" />
+            </a>
+
+            <a href="https://www.youtube.com/embed/rfTveRzYLL4?si=BcP0MiocNWdsN1m1">
+
+                <img src="https://img.youtube.com/vi/waqqXJarvp4/maxresdefault.jpg" />
+            </a>
+        </div>
+    </section>
+
 <section class="chamada">
-<div class="chamada-texto">
-<h1>Entretenimento</h1>
-<p>Filmes</p>
-<p>Séries</p>
-</div>
+    <div class="chamada-texto">
+        <h1>Entretenimento</h1>
+        <p>Filmes</p>
+        <p>Séries</p>
+    </div>
+    <section class="categoria">
 
-<iframe width="560" height="315"
-iframe width="560" height="315" src="https://www.youtube.com/embed/BjVBjVwe3lM?si=AwYQ2PDwdQbBqXpz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</section>
-<section class="categoria">
-<h2>Estilo de filmes e séries</h2>
-<div class="categoria-videos">
-<a
-href="https://www.youtube.com/embed/BjVBjVwe3lM?si=cZnxl7veR9KsDme6"
->
-<img src="https://img.youtube.com/vi/BjVBjVwe3lM/maxresdefault.jpg">
-</a>
-<a
-href="https://www.youtube.com/embed/uBqJeOY5-08?si=8eXxXvsqJwcsJ7Wp">
->
-<img src="https://img.youtube.com/vi/b2g2ZJ9BIpQ/maxresdefault.jpg" />
-</a>
-<a
-href="https://www.youtube.com/embed/g4gEFZ0TJ8o?si=TXfq6SgjMR41VS-J">
-<img src="https://img.youtube.com/vi/g4gEFZ0TJ8o/maxresdefault.jpg" />
-</a>
-<a
-href="https://www.youtube.com/embed/QDRLSqm_WVg?si=BmlYxUleZ3XeeODp">
+        <h2> 2- Estilo de filmes e séries</h2>
+        <div class="categoria-videos">
+            <a href="https://www.youtube.com/embed/BjVBjVwe3lM?si=cZnxl7veR9KsDme6">
+                <img src="https://img.youtube.com/vi/BjVBjVwe3lM/maxresdefault.jpg">
+            </a>
+            <a href="https://www.youtube.com/embed/uBqJeOY5-08?si=8eXxXvsqJwcsJ7Wp">
 
-<img src="https://img.youtube.com/vi/QDRLSqm_WVg/maxresdefault.jpg" />
-</a>
-<a
-href="https://www.youtube.com/embed/N-_khrXH0w0?si=Zf5R13-zYf6oSJpl">
-<img src="https://img.youtube.com/vi/N-_khrXH0w0/maxresdefault.jpg" />
-</a>
-<a
-href="https://www.youtube.com/embed/dHleJ3kT8VA?si=48T2dBoSgwxCJvzx">
-<img src="https://img.youtube.com/vi/dHleJ3kT8VA/maxresdefault.jpg" />
-</a>
-</div>
-</section>
+                <img src="https://img.youtube.com/vi/b2g2ZJ9BIpQ/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/embed/g4gEFZ0TJ8o?si=TXfq6SgjMR41VS-J">
+                <img src="https://img.youtube.com/vi/g4gEFZ0TJ8o/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/embed/QDRLSqm_WVg?si=BmlYxUleZ3XeeODp">
+
+                <img src="https://img.youtube.com/vi/QDRLSqm_WVg/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/embed/N-_khrXH0w0?si=Zf5R13-zYf6oSJpl">
+                <img src="https://img.youtube.com/vi/N-_khrXH0w0/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/embed/dHleJ3kT8VA?si=48T2dBoSgwxCJvzx">
+                <img src="https://img.youtube.com/vi/dHleJ3kT8VA/maxresdefault.jpg" />
+            </a>
+        </div>
+    </section>
+
+
 </body>
+
 </html>
+
+
+
+
+
+
+
+
